tests/ok/for-iterator-filter-pattern.ari
struct Counter {
  mut current: i64,
  end: i64,
}

impl Iterator[i64] for Counter {
  fn next(self: ref mut Self) -> Option[i64] {
    if self.current < self.end {
      let value = self.current;
      self.current = self.current + 1;
      return Some(value);
    }
    return None<i64>();
  }
}

fn main() -> i64 {
  let cursor = Counter { current: 1, end: 6 };
  var total = 0;
  for let 2 | 4 in cursor {
    total = total + 10;
  }
  total
}
